--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16-alpine
@@ -19,7 +17,7 @@ services:
       - db_data:/var/lib/postgresql/data
 
   api:
-    image: node:20-alpine
+    image: node:20
     working_dir: /app
     command: sh -c "npm install && npm run db:migrate && npm run dev"
     environment:
@@ -34,7 +32,7 @@ services:
       - .:/app
 
   worker:
-    image: node:20-alpine
+    image: node:20
     working_dir: /app
     command: sh -c "npm install && npm run worker"
     environment:
