--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # PostgreSQL connection string used by Prisma
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/oscarps?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/ordersdb?schema=public"
 
 # HTTP server
 PORT=3000
