--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: oscarps
+      POSTGRES_DB: ordersdb
     ports:
       - "5432:5432"
     healthcheck:
@@ -21,7 +21,7 @@ services:
     working_dir: /app
     command: sh -c "npm install && npm run db:migrate && npm run dev"
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/oscarps?schema=public
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/ordersdb?schema=public
       PORT: 3000
     ports:
       - "3000:3000"
@@ -36,7 +36,7 @@ services:
     working_dir: /app
     command: sh -c "npm install && npm run worker"
     environment:
-      DATABASE_URL: postgresql://postgres:postgres@db:5432/oscarps?schema=public
+      DATABASE_URL: postgresql://postgres:postgres@db:5432/ordersdb?schema=public
       WORKER_POLL_INTERVAL_MS: 1000
       WORKER_PROCESSING_DELAY_MS: 2000
       WORKER_BATCH_SIZE: 5
